# financial_report_app

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  todo.txt
financial_report_app_new/: .gitignore  CMakeLists.txt  CMakeLists.txt.qtds  DescribeUndefinedTagsScreen.qml  LoadXmlScreen.qml  Main.qml  OperationsByType.qml  SecondScreen.qml  UndefinedOperationsInfoBox.qml  UndefinedOperationsMainContent.qml  main.cpp
financial_report_app_new/backend/: DescribeUndefinedTagsScreen.cpp  DescribeUndefinedTagsScreen.hpp  OperationsByTypeScreen.cpp  OperationsByTypeScreen.hpp  backend.cpp  backend.hpp  globals.hpp
financial_report_app_new/xml/: categoriesTags.json  xd_test_file.json  xmlParser.cpp  xmlParser.hpp
financial_report_app_new/xml_cpp_training/: CMakeLists.txt  main  xml_training_lib.cpp  xml_training_lib.h
financial_report_app_new/xml_cpp_training/tests/: test_xml.cpp
xml/: categoriesTags.json  xmlParser.cpp  xmlParser.hpp
xml_cpp_training/: README.md  app  example.xml  main.cpp  xml_training_lib.h
xml_cpp_training/tests/: test_xml.cpp
